push-image/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-custom
spec:
  ingressClassName: openshift-default
  rules:
    - host: webserver-00.apps.cluster1.openshift.vms.sass.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 8080
